--- a/food app/index.html
+++ b/food app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Direct Dish-Food App</title>
+    <title>Funny-Food App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
